change html index file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>my revealjs page</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -38,6 +38,11 @@
 					- abc
 					- efe
 					 $$ \theta  = \int_{-\infty}^{+\infty} f(x) \mathrm{d}x $$
+					---
+					## slide 4
+					### Euler's identity
+					$$ e^{\mathrm{i\theta}} = \cos(\theta) + \mathrm{i} \sin(\theta) $$
+					 
 				  </textarea>
 				</section>
 
