--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
 				  </textarea>
 				</section>
 
+				<section> 
+					THIS is another 
+					<section> 
+						vertical section 1 
+					</section>
+					<section> 
+						section veritically displayed 2
+					</section>
+				</section>
+
 			</div>
 		</div>
 
