19/01/22 with external md

--- a/examples/markdown.html
+++ b/examples/markdown.html
@@ -19,7 +19,7 @@
 			<div class="slides">
 
                 <!-- Use external markdown resource, separate slides by three newlines; vertical slides by two newlines -->
-                <section data-markdown="markdown.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+                <section data-markdown="markdown.md" data-separator="^\r\n\r\n\r\n" data-separator-vertical="^\r\n\r\n"></section>
 
                 <!-- Slides are separated by three dashes (the default) -->
                 <section data-markdown>
