--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+				<!-- Use external markdown resource, separate slides by three newlines; vertical slides by two newlines -->
+                <section data-markdown="SSA.md" data-separator="^\r\n\r\n\r\n" data-separator-vertical="^\r\n\r\n"></section>
+
 				<section>Slide AAAAA</section>
 				
 				
