--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
 						section veritically displayed 2
 					</section>
 				</section>
+				
+				<section data-markdown>
+				    <script type="text/template">
+					![Sample image](https://s3.amazonaws.com/static.slid.es/logo/v2/slides-symbol-512x512.png)
+				    </script>
+				</section>
 
 			</div>
 		</div>
